tests/snapshots/cli__requests.snap
---
source: tests/cli.rs
expression: help
---
Inspect pending requests

Usage: requests <COMMAND>

Commands:
  list  List pending requests involving the active account
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
