tests/snapshots/cli__requests_accept.snap
---
source: tests/cli.rs
expression: help
---
Accept an incoming request after authoritative validation and confirmation

Usage: accept [OPTIONS] <REQUEST_ID>

Arguments:
  <REQUEST_ID>
          Canonical incoming request ID

Options:
      --source <SOURCE_ID>
          Peer-eligible source ID from `venmo pay options`

      --protect
          Turn on Purchase Protection; its seller fee is deducted from recipient proceeds

      --yes
          Skip only the final default-No confirmation

      --dry-run
          Complete preflight and show details without accepting the request

  -h, --help
          Print help (see a summary with '-h')

Acceptance is an unprotected personal payment by default. Without `--source`, it uses a peer-eligible Venmo balance source when available balance covers the request; otherwise it selects the unique default or sole eligible external peer method. `--source` submits that exact peer-eligible balance, bank, or card ID and never silently substitutes another source. Any explicit source or `--protect` uses the modern approval route. `--protect` turns on Venmo Purchase Protection; Venmo deducts its disclosed seller fee from the amount the recipient receives. Confirmation defaults to No. Financial exit code 3 means the acceptance outcome must be verified independently. Do not retry; check `activity list`, `requests list`, and the official Venmo app.
