tests/snapshots/cli__requests_create.snap
---
source: tests/cli.rs
expression: help
---
Create a request after validation and confirmation

Usage: create [OPTIONS] <USERNAME> <AMOUNT> <NOTE>

Arguments:
  <USERNAME>
          Exact username with an optional leading @

  <AMOUNT>
          Positive USD amount with at most two fractional digits

  <NOTE>
          Non-empty request note

Options:
      --visibility <VISIBILITY>
          Visibility of the created request

          [default: private]
          [possible values: private, friends, public]

      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help (see a summary with '-h')

Confirmation defaults to No and requires both stdin and stderr to be terminals unless `--yes` is supplied. Financial exit code 3 means the request outcome must be verified independently. Do not retry; check `requests list` and the official Venmo app.
