tests/snapshots/cli__requests_info.snap
---
source: tests/cli.rs
expression: help
---
Show information about one open request

Usage: info <REQUEST_ID>

Arguments:
  <REQUEST_ID>
          Canonical request ID

Options:
  -h, --help
          Print help
