tests/snapshots/cli__top_level.snap
---
source: tests/cli.rs
expression: help
---
An unofficial Venmo command-line client

Usage: venmo [OPTIONS] <COMMAND>

Commands:
  auth             Validate and manage the stored Venmo bearer token
  pay              Pay one person
  friends          Inspect friends of the active account
  users            Find Venmo users
  payment-methods  Inspect available payment methods
  balance          Show the Venmo wallet balance
  activity         Inspect account activity
  requests         Inspect and manage requests
  transfer         Inspect transfer eligibility or perform confirmed standard-bank transfers
  help             Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose
          Write redacted diagnostics to stderr

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Financial exit code 3 means the write outcome must be verified independently. Do not retry; check `activity list`, `requests list`, and the official Venmo app.
