tests/snapshots/cli__transfer.snap
---
source: tests/cli.rs
expression: help
---
Inspect transfer eligibility or perform confirmed standard-bank transfers

Usage: transfer <COMMAND>

Commands:
  options  Show current inbound and outbound transfer eligibility without moving money
  out      Transfer Venmo balance to the unique selected standard bank destination
  in       Add money from an eligible standard bank source to the Venmo balance
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
