tests/snapshots/cli__transfer_in.snap
---
source: tests/cli.rs
expression: help
---
Add money from an eligible standard bank source to the Venmo balance

Usage: in [OPTIONS] <AMOUNT>

Arguments:
  <AMOUNT>
          Positive USD amount with at most two fractional digits

Options:
      --source <SOURCE_ID>
          Exact eligible source ID shown by `venmo transfer options`

      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help (see a summary with '-h')

Confirmation defaults to No. Financial exit code 3 means the add-funds outcome must be verified independently. Do not retry; check `activity list` and the official Venmo app. The source must be a currently eligible standard bank source. When --source is omitted, exactly one source must be marked as default. Instant and debit add-funds remain unavailable.
