tests/snapshots/cli__transfer_options.snap
---
source: tests/cli.rs
expression: help
---
Show current inbound and outbound transfer eligibility without moving money

Usage: options

Options:
  -h, --help
          Print help
